# bidrs

./: .env  .gitignore  Cargo.toml  README.md  migrant.py
__client/: package.json
__client/src/: App.js
backend/: Cargo.toml
backend/resources/migrations/20161222-001214.initial/: 20161222-001214.initial.up.sql
backend/src/: auth.rs  cli.rs  lib.rs  main.rs  middleware.rs  models.rs  sql.rs
backend/src/handlers/: hello.rs  mod.rs
backend/src/service/: mod.rs  routes.rs
client/: package.json  project.clj
client/resources/public/: index.html
client/src/: App.js  index.js
client/src/client/: auth.cljs  browse.cljs  common.cljs  core.cljs  navigation.cljs
frontend/client/: Procfile  README.md  project.clj
frontend/client/dev/: user.clj
frontend/client/resources/public/: index.html
frontend/react/client/: package.json
frontend/react/client/src/: App.css
react/bidr/: package.json
react/client/: package.json
react/client/src/: App.js  index.js
resources/migrations/0.initial.20161107-162358/: down.0.initial.20161107-162358.sql  up.0.initial.20161107-162358.sql
resources/migrations/20161222-001214.initial/: 20161222-001214.initial.down.sql  20161222-001214.initial.up.sql
src/: .env  cli.rs  lib.rs  macros.rs  main.rs  middleware.rs  models.rs  sessions.rs  sql.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/handlers/: hello.rs  info.rs  items.rs  login.rs  logout.rs  mod.rs  msg.rs  users.rs  whoami.rs
src/macros/: mod.rs
src/middleware/: mod.rs
src/service/: mod.rs  routes.rs
src/sessions/: mod.rs
src/sql/: mod.rs  models.rs
static/client/: index.html
static/client/css/: style.css
tests/: biddy.rs
(+13 files in other folders)
