[package]
name = "biddy"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
postgres = { version = "0.13", features = ["with-uuid", "with-chrono"] }
fallible-iterator = "0.1.3"
rustc-serialize = "0.3"
uuid = { version = "0.2", features = ["v4"] }
chrono = { version = "0.2", features = ["rustc-serialize"] }
