[package]
name = "biddy"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
postgres = { version = "0.13", features = ["with-uuid", "with-chrono", "with-rustc-serialize"] }
fallible-iterator = "0.1.3"
rustc-serialize = "0.3"
uuid = { version = "0.3", features = ["v4", "rustc-serialize"] }
chrono = { version = "0.2", features = ["rustc-serialize"] }

r2d2 = "0.7"
r2d2_postgres = "0.11"

iron = "*"
router = "*"
logger = "*"
env_logger = "*"
